--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 
 dependencies:
   analyzer: ^1.1.0
-  args: '>=0.12.1 <2.0.0'
+  args: ^2.0.0
   dart_style: ^1.0.0
   intl: ^0.17.0
   path: '>=0.9.0 <2.0.0'
